--- a/etc/buildout.cfg
+++ b/etc/buildout.cfg
@@ -1,7 +1,6 @@
 # Buildout configuration file to deploy a development environment.
 [buildout]
-extensions =
-    buildout-versions
+extensions = buildout-versions
 versions = versions
 # Configure directories: put buildout generated files in lib/buildout instead
 # of in current directory.
@@ -12,20 +11,21 @@ installed = ${buildout:directory}/lib/buildout/.installed.cfg
 parts-directory = ${buildout:directory}/lib/buildout/parts
 # Package index, mirrors, allowed hosts and dependency links. Those options
 # control locations where buildout looks for packages.
-index = http://f.pypi.python.org/simple
+index = https://simple.crate.io
 find-links =
-allow-hosts = *.python.org
+allow-hosts =
+    *.crate.io
+    packages.crate-cdn.com
 use-dependency-links = false
 # Development.
-develop =
-    ${buildout:directory}/
+develop = ${buildout:directory}/
 parts =
-    xal
+    scripts
     directories
     releaser
     activate
 
-[xal]
+[scripts]
 recipe = z3c.recipe.scripts
 eggs =
     xal
@@ -35,6 +35,9 @@ eggs =
     coverage
     Sphinx
     sphinxcontrib-testbuild
+dependent-scripts = true
+interpreter = python
+include-site-packages = false
 
 [directories]
 recipe = z3c.recipe.mkdir
@@ -43,25 +46,31 @@ paths =
     var/docs
     var/test
 
+# Releaser tool.
 [releaser]
 recipe = z3c.recipe.scripts
 eggs = zest.releaser
 
+# Activate script.
 [activate]
 recipe = evg.recipe.activate
 
+
+# Known good set (KGS) of versions.
 [versions]
-# Known good set (KGS) of versions
-Jinja2 = 2.6
-Sphinx = 1.1.3
+bpython = 0.10.1
 buildout-versions = 1.7
 coverage = 3.6
+docutils = 0.10
 evg.recipe.activate = 0.5
-nose = 1.2.1
+Jinja2 = 2.6
+nose = 1.3.0
+Pygments = 1.6
 python-termstyle = 0.1.9
 rednose = 0.3
+Sphinx = 1.2b1
 sphinxcontrib-testbuild = 0.1.2
 z3c.recipe.mkdir = 0.5
 z3c.recipe.scripts = 1.0.1
 zc.recipe.egg = 1.3.2
-zest.releaser = 3.43
+zest.releaser = 3.45
