--- a/etc/buildout.cfg
+++ b/etc/buildout.cfg
@@ -1,6 +1,6 @@
 # Buildout configuration file to deploy a development environment.
 [buildout]
-extensions = buildout-versions
+show-picked-versions = true
 versions = versions
 # Configure directories: put buildout generated files in lib/buildout instead
 # of in current directory.
@@ -26,7 +26,7 @@ parts =
     activate
 
 [scripts]
-recipe = z3c.recipe.scripts
+recipe = zc.recipe.egg
 eggs =
     xal
     bpython
@@ -48,7 +48,7 @@ paths =
 
 # Releaser tool.
 [releaser]
-recipe = z3c.recipe.scripts
+recipe = zc.recipe.egg
 eggs = zest.releaser
 
 # Activate script.
@@ -59,18 +59,17 @@ recipe = evg.recipe.activate
 # Known good set (KGS) of versions.
 [versions]
 bpython = 0.10.1
-buildout-versions = 1.7
 coverage = 3.6
 docutils = 0.10
 evg.recipe.activate = 0.5
-Jinja2 = 2.6
+Jinja2 = 2.7
+MarkupSafe = 0.18
 nose = 1.3.0
 Pygments = 1.6
 python-termstyle = 0.1.9
 rednose = 0.3
-Sphinx = 1.2b1
-sphinxcontrib-testbuild = 0.1.2
-z3c.recipe.mkdir = 0.5
-z3c.recipe.scripts = 1.0.1
-zc.recipe.egg = 1.3.2
-zest.releaser = 3.45
+Sphinx = 1.1.3
+sphinxcontrib-testbuild = 0.1.3
+z3c.recipe.mkdir = 0.6
+zc.recipe.egg = 2.0.0
+zest.releaser = 3.46
