--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
-python:
-  - "2.6"
-  - "2.7"
-install: make configure develop
-script: make test
+env:
+  - TOXENV=py27
+  - TOXENV=flake8
+  - TOXENV=sphinx
+  - TOXENV=readme
+install:
+  - make develop
+script:
+  - make test
