--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
     nose
     rednose
 commands =
-    pip install -e .
+    pip install -e .[ssh]
     nosetests --verbosity=2 --with-doctest --all-modules --nocapture --with-coverage --cover-package=xal --cover-tests xal tests
     coverage erase
     pip freeze
@@ -23,7 +23,7 @@ deps =
     Sphinx
 commands =
     pip install -e .
-    make --directory=docs SPHINXOPTS='-W' clean html doctest linkcheck
+    make --directory=docs SPHINXOPTS='-W' clean {posargs:html doctest linkcheck}
 whitelist_externals =
     make
 
