Introduced SSH support using Fabric. Starting with proof of concept implementation of filesystem API.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
-# Local binaries (they are generated).
-/bin/
-
 # Python files.
 *.pyc
 *.pyo
 *.egg-info
 
-# Libraries.
-/lib/
-
 # Data files.
 /var/
 
-# Editor(s) temporary files.
-.*.swp
+# Tox files.
+/.tox/
