--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ commands =
 deps =
     Sphinx
 commands =
-    pip install -e .
+    pip install -e .[ssh]
     make --directory=docs SPHINXOPTS='-W' clean {posargs:html doctest linkcheck}
 whitelist_externals =
     make
