--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     rednose
 commands =
     pip install -e .[ssh]
-    nosetests --verbosity=2 --with-doctest --all-modules --nocapture --with-coverage --cover-package=xal --cover-tests xal tests
+    nosetests --verbosity=2 --with-doctest --all-modules --nocapture --with-coverage --cover-package=xal --cover-tests xal
     coverage erase
     pip freeze
 
