Using pytest to run tests (was nose). Work in progress.

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,12 @@ envlist = py27, flake8, sphinx, readme
 [testenv]
 deps =
     coverage
-    nose
-    rednose
+    pytest
+    pytest-cov
+    pytest-xdist
 commands =
     pip install -e .[ssh]
-    nosetests --verbosity=2 --with-doctest --all-modules --nocapture --with-coverage --cover-package=xal --cover-tests xal
+    py.test -x --verbose --capture=no --cov=xal --doctest-modules {posargs: xal tests}
     coverage erase
     pip freeze
 
