Flattened documentation. Declared (empty) dependencies for local sessions.

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     pytest-cov
     pytest-xdist
 commands =
-    pip install -e .[ssh]
+    pip install -e .[local,ssh]
     py.test -x --verbose --capture=no --cov=xal --doctest-modules {posargs: xal tests}
     coverage erase
     pip freeze
@@ -23,7 +23,7 @@ commands =
 deps =
     Sphinx
 commands =
-    pip install -e .[ssh]
+    pip install -e .[local,ssh]
     make --directory=docs SPHINXOPTS='-W' clean {posargs:html doctest linkcheck}
 whitelist_externals =
     make
