Run all tests by default (was fail fast)

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     pytest-xdist
 commands =
     pip install -e .[local,ssh]
-    py.test -x --verbose --capture=no --cov=xal --doctest-modules {posargs: xal tests}
+    py.test --verbose --capture=no --cov=xal --doctest-modules {posargs: xal tests}
     coverage erase
     pip freeze
 
