--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,9 @@ deps =
     docutils
     pygments
 commands =
+    pip install -e .[local,ssh]
     mkdir -p var/docs
+    python -m doctest README.rst
     rst2html.py --exit-status=2 README.rst var/docs/README.html
     rst2html.py --exit-status=2 CONTRIBUTING.rst var/docs/CONTRIBUTING.html
 whitelist_externals =
